Web Perfil y porfolio

--- a/dwec-profile/index.html
+++ b/dwec-profile/index.html
@@ -15,16 +15,16 @@
     <body>
         <nav class="top-menu">
             <ul class="menu">
-                <li class="item icon-user">
+                <li class="item icon-star">
                     <a href="#section-profile" target="_self">Profile</a>
                 </li>
                 <li class="item icon-user">
                     <a href="#section-interests" target="_self">Interests</a>
                 </li>
-                <li class="item icon-user">
+                <li class="item icon-building">
                     <a href="#section-cv" target="_self">C.V.</a>
                 </li>
-                <li class="item icon-user">
+                <li class="item icon-clipboard">
                     <a href="#section-projects" target="_self">Portfolio</a>
                 </li>
                 <li class="item icon-envelope">
@@ -35,25 +35,51 @@
         <div class="section" id="section-profile">
             <h1 class="title">My Profile</h1>
             <div class="content clear left">
-                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <ul class="profile icon-cursor">
+                            <li>
+                                <label>Jaume Llopis</label>
+                            </li>
+                            <li>
+                                <label>Web-CMS Dev</label>
+                            </li>
+                            <li>
+                                <label>Designer</label>
+                            </li>
+                            <li>
+                                <label>Animator & 3D Modeller</label>
+                            </li>
+                            <li>
+                                <label><a href="#">https://mywebsucks.com</a></label>
+                            </li>
+                        </ul>
             </div>
         </div>
-        <div class="section clear" id="section-interests">
+        <div class="section dark" id="section-interests">
             <h1 class="title">About Me</h1>
             <div class="content clear right">
-                <p> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        Soy Jaume Llopis, programador, animador y 3d modeller, autónomo freelance con poco tiempo
+                        tiempo libre.
+                        He trabajado en algunos proyectos web y en varias  empresas del sector.
             </div>
         </div>
-        <div class="section" id="section-cv">
+        <div class="section clear" id="section-cv">
             <h1 class="title">History / C.V.</h1>
             <div class="content dark right">
-                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                <ul class="history"> 
+                    <li><i>2014 - 2018</i> - WEB-CMS Developer at bestwebddevs.com</li>
+                    <li><i>2010 - 2014</i> - Senior IT admin consultor at bestbusiness.com</li>
+                    <li><i>2008 - 2010</i> - CRM developer and integrator at wesellboats.com</li>
+                </ul>
             </div>   
         </div>
         <div class="section" id="section-projects">
             <h1 class="title">My PortFolio</h1>
-            <div class="content dark right">
-                <p> Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+            <div class="content clear right">
+                <ul class="portfolio">
+                    <li><a href="#">https://fastbend.com</a></li>
+                    <li><a href="#">https://mueblesboscobarber.es</a></li>
+                    <li><a href="#">https://menorcablava.com</a></li>
+                </ul>
             </div>
         </div>
         <div class="section" id="section-contact">
