Web Perfil y porfolio

--- a/dwec-profile/index.html
+++ b/dwec-profile/index.html
@@ -32,7 +32,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="section" id="section-profile">
+        <div class="section clear" id="section-profile">
             <h1 class="title">My Profile</h1>
             <div class="content clear left">
                     <ul class="profile icon-cursor">
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </div>
-        <div class="section" id="section-contact">
+        <div class="section clear" id="section-contact">
             <h1 class="title">Contact Me</h1>
             <div class="content full clear">
                 <form name="contact" method="post" action="index.html">
