Web Perfil y porfolio

--- a/dwec-profile/index.html
+++ b/dwec-profile/index.html
@@ -74,13 +74,10 @@
         </div>
         <div class="section" id="section-projects">
             <h1 class="title">My PortFolio</h1>
-            <div class="content clear right">
-                <ul class="portfolio">
-                    <li><a href="#">https://fastbend.com</a></li>
-                    <li><a href="#">https://mueblesboscobarber.es</a></li>
-                    <li><a href="#">https://menorcablava.com</a></li>
-                </ul>
-            </div>
+            <a class="content dark full" target="_blank" href="https://fastbend.com">https://fastbend.com</a>
+            <a class="content dark full" target="_blank" href="https://menorcablava.com">https://menorcablava.com</a>
+            <a class="content dark full" target="_blank" href="https://apalliser.com">https://apalliser.com</a>
+            <a class="content dark full" target="_blank" href="http://canrocanou.com">http://canrocanou.com</a>
         </div>
         <div class="section clear" id="section-contact">
             <h1 class="title">Contact Me</h1>
@@ -88,7 +85,7 @@
                 <form name="contact" method="post" action="index.html">
                     <input type="text" name="name" placeholder="Your name" />
                     <input type="email" name="email" placeholder="Your email" />
-                    <input type="tel" name="telephone" placeholder="Your telephone no." />
+                    <input ttype="tel" name="telephone" placeholder="Your telephone no." />
                     <select name="contact_type">
                         <option value="request">Request</option>
                         <option value="partnership">Partnership</option>
