Web Perfil y porfolio

--- a/dwec-profile/index.html
+++ b/dwec-profile/index.html
@@ -16,25 +16,33 @@
         <nav class="top-menu">
             <ul class="menu">
                 <li class="item icon-star">
-                    <a href="#section-profile" target="_self">Profile</a>
+                    <a href="#section-profile" target="_self">Hey!</a>
                 </li>
                 <li class="item icon-user">
-                    <a href="#section-interests" target="_self">Interests</a>
+                    <a href="#section-interests" target="_self">Mi perfil</a>
                 </li>
                 <li class="item icon-building">
-                    <a href="#section-cv" target="_self">C.V.</a>
+                    <a href="#section-cv" target="_self">Experiencia</a>
                 </li>
                 <li class="item icon-clipboard">
                     <a href="#section-projects" target="_self">Portfolio</a>
                 </li>
                 <li class="item icon-envelope">
-                    <a href="#section-contact" target="_self">Contact Me</a>
+                    <a href="#section-contact" target="_self">Contactar</a>
                 </li>
             </ul>
         </nav>
         <div class="section clear" id="section-profile">
-            <h1 class="title">My Profile</h1>
+            <h1 class="title">Bienvenid@</h1>
             <div class="content clear left">
+                    Soy Jaume Llopis, programador, animador y 3d modeller, autónomo freelance con poco tiempo
+                    tiempo libre.
+                    He trabajado en algunos proyectos web y en varias  empresas del sector.
+        </div>
+        </div>
+        <div class="section dark" id="section-interests">
+            <h1 class="title">Mi perfil</h1>
+            <div class="content clear right">
                     <ul class="profile icon-cursor">
                             <li>
                                 <label>Jaume Llopis</label>
@@ -54,16 +62,8 @@
                         </ul>
             </div>
         </div>
-        <div class="section dark" id="section-interests">
-            <h1 class="title">About Me</h1>
-            <div class="content clear right">
-                        Soy Jaume Llopis, programador, animador y 3d modeller, autónomo freelance con poco tiempo
-                        tiempo libre.
-                        He trabajado en algunos proyectos web y en varias  empresas del sector.
-            </div>
-        </div>
         <div class="section clear" id="section-cv">
-            <h1 class="title">History / C.V.</h1>
+            <h1 class="title">Historial y C.V.</h1>
             <div class="content dark right">
                 <ul class="history"> 
                     <li><i>2014 - 2018</i> - WEB-CMS Developer at bestwebddevs.com</li>
@@ -73,14 +73,14 @@
             </div>   
         </div>
         <div class="section" id="section-projects">
-            <h1 class="title">My PortFolio</h1>
+            <h1 class="title">Proyectos</h1>
             <a class="content dark full" target="_blank" href="https://fastbend.com">https://fastbend.com</a>
             <a class="content dark full" target="_blank" href="https://menorcablava.com">https://menorcablava.com</a>
             <a class="content dark full" target="_blank" href="https://apalliser.com">https://apalliser.com</a>
             <a class="content dark full" target="_blank" href="http://canrocanou.com">http://canrocanou.com</a>
         </div>
         <div class="section clear" id="section-contact">
-            <h1 class="title">Contact Me</h1>
+            <h1 class="title">Contactar</h1>
             <div class="content full clear">
                 <form name="contact" method="post" action="index.html">
                     <input type="text" name="name" placeholder="Your name" />
