--- a/dwec-profile/index.html
+++ b/dwec-profile/index.html
@@ -8,7 +8,7 @@
 
         <link href="assets/style.css" rel="stylesheet" />
         
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
+        <!---->script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script-->
 
         <!--script type="text/javascript" src="assets/script.js"></script-->
     </head>
