Bloque B  de Javascript y juego Ahorcado completado (o casi)

--- a/u1_dni/u1_dni/public_html/index.html
+++ b/u1_dni/u1_dni/public_html/index.html
@@ -13,7 +13,6 @@
                 <input id="dni" type="text" name="DNI" value="" />
             </fieldset>
             <fieldset>
-                <button class="teclado" name="num" value="0">0</button>
                 <button class="teclado" name="num" value="1">1</button>
                 <button class="teclado" name="num" value="2">2</button>
                 <button class="teclado" name="num" value="3">3</button>
@@ -23,10 +22,11 @@
                 <button class="teclado" name="num" value="7">7</button>
                 <button class="teclado" name="num" value="8">8</button>
                 <button class="teclado" name="num" value="9">9</button>
+                <button class="teclado" name="num" value="0">0</button>
             </fieldset>
             <fieldset>
                 <button id="calcular">Calcular</button>
-                <button id="limpiar">Borrar</button>
+                <!--button id="limpiar">Borrar</button-->
             </fieldset>
         </form>
         
