--- a/AssociacioEsportiva/public_html/utilitats.html
+++ b/AssociacioEsportiva/public_html/utilitats.html
@@ -76,8 +76,14 @@
 
                 <div class="background-clear  utility-form" data-bind="imc">
                     <h5>Calculadora IMC</h5>
-                    <input id="imc_height" type="number" value="1" min="1" />
-                    <input id="imc_weight" type="number" value="1" min="1" />
+                    <fieldset>
+                        <label>Altura</label>
+                        <input id="imc_height" type="number" value="1.5" min="1.0" step="0.1" />
+                    </fieldset>
+                    <fieldset>
+                        <label>Peso</label>
+                        <input id="imc_weight" type="number" value="40.0" min="1.0" step="0.1" />
+                    </fieldset>
                     <button id="imc_button" type="button" class="btn btn-large">Calcular</button>
                     <div id="imc_output" class="panel">
                         <!-- -->
@@ -86,6 +92,21 @@
                 
                 <div class="background-clear utility-form" data-bind="fcm">
                     <h5>Calculadora FCM</h5>
+                    <fieldset>
+                        <label>Edad</label>
+                        <input id="fcm_edad" type="number" value="10" min="1" max="120" step="1" />
+                    </fieldset>
+                    <fieldset>
+                        <label>Sexo</label>
+                        <select id="fcm_sexo" size="1">
+                            <option value="h">Hombre</option>
+                            <option value="m">Mujer</option>
+                        </select>
+                    </fieldset>
+                    <button id="fcm_button" type="button" class="btn btn-large">Calcular</button>
+                    <div id="fcm_output" class="panel">
+                        <!-- -->
+                    </div>
                 </div>
 
                 <div class="background-clear utility-form" data-bind="categoria">
