--- a/AssociacioEsportiva/public_html/index.html
+++ b/AssociacioEsportiva/public_html/index.html
@@ -41,21 +41,13 @@
         
         <div class="spacer large"></div>
 
-        <div class="container background-clear">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class="container background-clear">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="container">
+            <h1 class="header centered uppercase large clear">Cu&iacute;date!</h1>
+            <h6 class="centered remark clear">tu centro deportivo y de salud</h6>
         </div>
         
         <footer class="page-footer">
-          <div class="container">
+          <!--div class="container">
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">Footer Content</h5>
@@ -71,7 +63,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div-->
           <div class="footer-copyright">
             <div class="container">
             &copy; 2019 - MNK Coders
