Practica 2 Asociacion Deportiva

--- a/AssociacioEsportiva/public_html/contactar.html
+++ b/AssociacioEsportiva/public_html/contactar.html
@@ -30,6 +30,11 @@
                         <li><a href="index.html">Inici</a></li>
                         <li><a href="utilitats.html">Utilitats</a></li>
                         <li><a href="contactar.html">Contactar</a></li>
+                        <li class="box small" id="calendario">
+                            <span class="year">2000</span>
+                            <span class="day">1</span>
+                            <span class="month">Enero</span>
+                        </li>
                     </ul>
                 </div>
             </div>
