--- a/AssociacioEsportiva/public_html/utilitats.html
+++ b/AssociacioEsportiva/public_html/utilitats.html
@@ -14,6 +14,7 @@
         <link href="assets/style.css" rel="stylesheet" type="text/css" />
         
         <script type="text/javascript" src="assets/script.js"></script>
+        <script type="text/javascript" src="assets/utilidad.js"></script>
         <script type="text/javascript" src="assets/imc.js"></script>
         <script type="text/javascript" src="assets/fcm.js"></script>
         <script type="text/javascript" src="assets/categoria.js"></script>
@@ -34,6 +35,11 @@
                         <li><a href="index.html">Inici</a></li>
                         <li><a href="utilitats.html">Utilitats</a></li>
                         <li><a href="contactar.html">Contactar</a></li>
+                        <li class="box small" id="calendario">
+                            <span class="year">2000</span>
+                            <span class="day">1</span>
+                            <span class="month">Enero</span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -149,8 +155,9 @@
           </div-->
           <div class="footer-copyright">
             <div class="container">
-            &copy; 2019 - MNK Coders
-            <a class="grey-text text-lighten-4 right" href="#!">Condiciones de uso</a>
+                <span class="copyright">&copy; 2019 - Asociaci&oacute;n Deportiva</span>
+                <span class="designer">Diseñado por Jaume Llopis de Andr&eacute;s</span>
+                <a class="legal grey-text text-lighten-4 right" href="#!">Aviso Legal</a>
             </div>
           </div>
         </footer>
