--- a/AssociacioEsportiva/public_html/utilitats.html
+++ b/AssociacioEsportiva/public_html/utilitats.html
@@ -34,6 +34,7 @@
                     <ul id="main-menu" class="menu right">
                         <li><a href="index.html">Inici</a></li>
                         <li><a href="utilitats.html">Utilitats</a></li>
+                        <li><a href="socios.html">Socios</a></li>
                         <li><a href="contactar.html">Contactar</a></li>
                         <li class="box small" id="calendario">
                             <span class="year">2000</span>
