jQuery y template escacs

--- a/AgenciaViajes/agencia-2.html
+++ b/AgenciaViajes/agencia-2.html
@@ -123,10 +123,10 @@
                 </div>
             </div>
             <div class="col-sm-4">
-                <ul class="nav nav-pills">
+                <ul class="nav nav-pills filtres">
                     <li role="presentation" class="disabled"><a href="#">Veure els viatges:</a></li>
-                    <li role="presentation" class="active"><a href="#">Tots</a></li>
-                    <li role="presentation"><a href="#">Promocions</a></li>
+                    <li role="presentation" class="active"><a class="mostrar-tot" href="#">Tots</a></li>
+                    <li role="presentation"><a class="mostrar-promo" href="#">Promocions</a></li>
                 </ul>
                 <br>
                 <div class="panel panel-danger">
