--- a/AgenciaViajes/agencia-1.html
+++ b/AgenciaViajes/agencia-1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> </title>
-    <meta charset="UTF-8"></meta>
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/slate/bootstrap.css" type="text/css" />
     <link rel="stylesheet" href="css/estil.css" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
