--- a/AgenciaViajes/agencia-2.html
+++ b/AgenciaViajes/agencia-2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> </title>
+    <title> Agencia de viajes </title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="css/estil.css" type="text/css" />
 
@@ -12,6 +12,32 @@
 
     <script src="https://code.jquery.com/ui/1.12.0-beta.1/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.0-beta.1/themes/smoothness/jquery-ui.css" type="text/css" />
+    <style type="text/css">
+        .ui-droppable{
+            min-height: 100px;
+        }
+        .ui-droppable.empty{
+            color: rgba(255,255,255,0.5);
+            border: 1px dashed rgba(255,255,255,0.5);
+            box-sizing: border-box;
+            transition: ease-out 250ms;
+            position: relative;
+            border-radius: 4px;
+        }
+        .ui-droppable.empty:before{
+            content: 'vacio';
+            text-align: center;
+            display: block;
+            position: absolute;
+            width: 100%;
+            padding: 20% 0;
+        }
+        .ui-droppable.empty:hover{
+            background-color: rgba(255,255,255,0.05);
+            color: #fff;
+            border-color: #fff;
+        }
+    </style>
     <script src="scripts/script.js"></script>
 </head>
 
