--- a/escacas/public_html/index.html
+++ b/escacas/public_html/index.html
@@ -11,10 +11,10 @@
         <link rel="stylesheet" type="text/css" href="estil.css" />
     </head>
     <body>
+        <span class="icon rey"></span>
         <div id="escacs">
             
         </div>
-
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script type="text/javascript" src="escacs.js"></script>
     </body>
